objects/Interviewer__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Interviewers</relationshipLabel>
        <relationshipName>Interviewers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interviewer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>